# crossforge

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
crossforge/: __init__.py  cli.py
crossforge/adapters/: base.py  claude_adapter.py  codex_adapter.py
crossforge/core/: orchestrator.py  queue.py  reviewer.py
crossforge/skills/: manager.py
examples/: example_skill.yaml  run_example.sh
